--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/SanPhamDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/SanPhamDetail.cshtml
@@ -68,5 +68,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="AllSanPhamManager" class="btn btn-warning">Hủy</a>
 </div>
