--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/AllThuongHieuManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/AllThuongHieuManager.cshtml
@@ -38,14 +38,13 @@
                         <td>@item.MoTa</td>
                         <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
                         <td>
-                                <a asp-action="ThuongHieuDetail" asp-route-id="@item.MaThuongHieu" class="btn btn-info">Chi tiết</a> |
-                                <a asp-action="UpdateThuongHieu" asp-route-id="@item.MaThuongHieu" class="btn btn-warning">Sửa</a> |
+                                <a asp-action="UpdateThuongHieu" asp-route-id="@item.MaThuongHieu" class="btn btn-warning">Sửa</a> 
 
                         @if (item.TrangThai == 1)
                         {
                                             <form asp-action="UpdateStatusThuongHieuKKD" method="post" style="display:inline;">
                                                 <input type="hidden" name="id" value="@item.MaThuongHieu" />
-                                                <button type="submit" class="btn btn-success">Bật</button>
+                                                        <button type="submit" class="btn btn-secondary">Tăt</button>
 
                                                 </form>
 
@@ -59,7 +58,7 @@
                                                 </form>       
                         }
 
-                             |
+                             
 
                         </td>
                     </tr>
