--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/ChiTietSpDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/ChiTietSpDetail.cshtml
@@ -70,6 +70,5 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="AllChiTietSpManager" class="btn btn-warning">Hủy</a>
 </div>
