--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/CreateChiTietSp.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/CreateChiTietSp.cshtml
@@ -53,13 +53,14 @@
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+    <a asp-action="AllChiTietSpManager" class="btn btn-warning">Hủy</a>
+
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
