--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/UpdateKhuyenMai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/UpdateKhuyenMai.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>UpdateKhuyenMai</h1>
+<h1>Sửa Khuyến Mại</h1>
 @if (TempData["errorMessage"] != null)
 {
                 <div class="alert alert-danger">
@@ -30,20 +30,17 @@
                 <input asp-for="PhanTramGiam" class="form-control" />
                 <span asp-validation-for="PhanTramGiam" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TrangThai" class="control-label"></label>
-                <input asp-for="TrangThai" class="form-control" />
-                <span asp-validation-for="TrangThai" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+    <a asp-action="AllKhuyenMaiManager" class="btn btn-warning">Hủy</a>
+
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
