--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/CreateMauSac.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/CreateMauSac.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>CreateMauSac</h1>
+<h1>Thêm Màu Sắc</h1>
 
 <h4>MauSac</h4>
 @if (TempData["errorMessage"] != null)
@@ -31,13 +31,14 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+    <a asp-action="AllMauSacManager" class="btn btn-warning">Hủy</a>
+
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
