--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/AllSanPhamManager.cshtml
@@ -12,10 +12,10 @@
 }
 
 <div style="background : #fff;">
-<h1 style="text-align: center">Ql Sản Phẩm</h1>
+<h1 style="text-align: center">Quản Lý Sản Phẩm</h1>
 <div>
 <p>
-    <a class="btn btn-primary" asp-action="CreateSanPham">Create New</a>
+    <a class="btn btn-primary" asp-action="CreateSanPham">Thêm Sản Phẩm</a>
 </p>
 <table class="table">
     <thead>
@@ -98,22 +98,22 @@
                         </td>
                         <td>
                             @{
-                                var trangThai = item.TrangThai == 1 && item.TongSoLuong > 0 ? "Khả Dụng" :
-                                                item.TrangThai == 1 || item.TongSoLuong == 0 ? "Hết Hàng" : "Không Khả Dụng";
+                                var trangThai = item.TrangThai == 1 && item.TongSoLuong == 0 ? "Hết Hàng" :
+                                                item.TrangThai == 0 ? "Không Khả Dụng" : "Khả Dụng";
                             }
                             @trangThai
                         </td>
                         <td style="text-align : center; margin-bottom : 20px">
                             @if (item.TrangThai == 0)
                             {
-                                                        <form asp-action="UpdateStatusSanPhamKKD" method="post" style="display:inline;">
+                                                <form asp-action="UpdateStatusSPKD" method="post" style="display:inline;">
                                                             <input type="hidden" name="id" value="@item.MaSp" />
                                                             <button type="submit" class="btn btn-secondary">Bật</button>
                                                 </form>
                             }
                             @if (item.TrangThai == 1)
                             {
-                                                   <form asp-action="UpdateStatusSanPhamKD" method="post" style="display:inline;">
+                                                           <form asp-action="UpdateStatusSPKKD" method="post" style="display:inline;">
                                                             <input type="hidden" name="id" value="@item.MaSp" />
                                                     <button type="submit" class="btn btn-secondary">Tăt</button>
                                                 </form>
@@ -122,7 +122,7 @@
                                     <a asp-action="SanPhamDetail" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Chi Tiết</a>
                                     <a asp-action="UpdateSanPham" asp-controller="SanPham" asp-area="Admin" class="btn btn-primary" asp-route-id="@item.MaSp">Sửa</a>    
                                     <a asp-action="AllChiTietSpManager" asp-controller="ChiTietSP" asp-area="Admin" id="btn_chitiet_detail" class="btn btn-primary" type="button" asp-route-id="@item.MaSp"> SP Chi Tiết</a>
-                                                <a asp-action="AddChiTietSp" asp-route-id="@item.MaSp" class="btn btn-primary">Thêm Chi Tiết</a>
+                                    <a asp-action="AddChiTietSp" asp-route-id="@item.MaSp" class="btn btn-primary">Thêm Chi Tiết</a>
 
                         </td>
                     </tr>
