--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/UpdateSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/SanPham/UpdateSanPham.cshtml
@@ -56,13 +56,14 @@
             
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+    <a asp-action="AllSanPhamManager" class="btn btn-warning">Hủy</a>
+
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
