--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/AllSizeManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/AllSizeManager.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>AllSizeManager</h1>
+<h1>Quản Lý Size</h1>
 <div class="form-group">
     <form method="get" asp-action="AllSizeManager" asp-controller="Size" asp-area="Admin">
         <div class="row">
@@ -38,7 +38,6 @@
                                             <td>@item.MoTa</td>
                                         <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
                                     <td>
-                                                                <a asp-action="SizeDetail" asp-route-id="@item.MaSize" class="btn btn-info">Chi Tiết</a>
                                                                 <a asp-action="UpdateSize" asp-route-id="@item.MaSize" class="btn btn-warning">Cập Nhật</a>
                     @if (item.TrangThai == 1)
                     {
