--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/UpdateThuongHieu.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/UpdateThuongHieu.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<h1>Update ThuongHieu</h1>
+<h1>Sửa Thương Hiệu</h1>
 
 @if (ViewData["ErrorMessage"] != null)
 {
@@ -29,6 +29,8 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Update</button>
+    <a asp-action="AllThuongHieuManager" class="btn btn-warning">Hủy</a>
+
 </form>
 @section Scripts {
     @{
