--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -3,8 +3,10 @@
 @model IEnumerable<HN120_ShopQuanAo.View.Areas.Admin.Data.ChiTietSPView>
 
     @{
-    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+   Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     IEnumerable<Voucher> lstvc = ViewBag.lstVC as IEnumerable<Voucher>;
+    IEnumerable<User> ListUseradmin = ViewBag.ListUseradmin as IEnumerable<User>;
+    IEnumerable<User> ListUsers = ViewBag.ListUsers as IEnumerable<User>;
     IEnumerable<ThanhToan_ThanhToanHistory> thanhtoanhoadon = ViewBag.thanhtoanhoadon as IEnumerable<ThanhToan_ThanhToanHistory>;
    
     }
@@ -16,6 +18,7 @@
     </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
@@ -29,11 +32,17 @@
                         <input id="btn_ma" style="display:none" class="form-control" type="text" />
                     </div>
            <div class="row">
-              <div class="col-md-5" style="display:none">
+              <div class="col-md-5" >
                   <div class="row">
-                      <div class="col-md-6" style="display:none">
-                          <label for="btn_UserID">User Name</label>
-                            <input id="btn_UserID" class="form-control" type="text" value="a1fa4eb4-a57f-452a-ba47-f546c003a991" />
+                      <div class="col-md-6" >
+                          <label for="btn_UserID">Nhân viên</label>
+                            <select id="btn_UserID" class="form-control">
+                                @foreach (var item in ListUseradmin)
+                                {
+
+                                    <option value="@item.Id">@item.FullName</option>
+                                }
+                            </select>
                       </div>
                     
                      
@@ -44,17 +53,7 @@
                       <div class="col-md-6" style="display:none">
                           <label for="btn_Status">Trạng thái</label>
                           <input id="btn_Status" class="form-control" type="text" value="5" />
-                      </div>
-                     @*  <div class="col-md-6">
-                          <label for="btn_PhuongTTT">Phương thức thanh toán</label>
-                          <select id="btn_PhuongTTT" class="form-select">
-                              @foreach (var item in thanhtoanhoadon)
-                              {
-                                  <option value="@item.MaPhuongThuc">@item.TenPhuongThuc</option>
-                              }
-
-                          </select>
-                      </div> *@
+                      </div>                   
                   </div>
               </div>
 
@@ -62,15 +61,20 @@
                  <div class="row">
                       <div class="col-md-4">
                           <label for="btn_TenKhachHang">Tên khách hàng</label>
-                          <input id="btn_TenKhachHang" class="form-control" type="text" />
+                            <select id="btn_TenKhachHang" class="form-control">
+                                <option value="">Khách lẻ</option>
+                                @foreach (var item in ListUsers)
+                                {
+                                    <option value="@item.Id">@item.FullName</option>
+                                }
+                               
+                            </select>
                       </div>
                         <div class="col-md-4">
                             <label for="btn_SoDienThoai">Số điện thoại</label>
                             <input id="btn_SoDienThoai" class="form-control" type="text" />
                             <div id="phoneError" style="color: red; display: none;">Số điện thoại không hợp lệ.</div>
                         </div>
-
-                      </div>
                         <div class="col-md-4">
                             <label for="btn_NgayTaoDon">Ngày tạo hóa đơn</label>
                             <input id="btn_NgayTaoDon" class="form-control" type="date" />
@@ -114,7 +118,7 @@
     <div class="card-body">
                <div class="row">
                 <div class="col-md-8">
-                    <div class="col-md-12" style="height: 300px;">
+                    <div class="col-md-12" style="height: 320px;">
                         
                         <div style="height: 300px; overflow-y: auto;" class="border border-5">
                             <table class="table table-borderless" id="chitiethoadon_table">
@@ -227,9 +231,9 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                </div>
 
-                <div class="col-md-4 border border-5" style="height: 650px;">
+                <div class="col-md-4 border border-5" style="height: 670px;">
                     <div class="row" style="height: 60%;">
                         <div class="co-md-12" style="height:100px"><h2>Chi tiết thanh toán</h2></div>
                         <table class="info-table">
@@ -272,11 +276,28 @@
                                 <td>VNĐ</td>
                             </tr>
                         </table>
-                        <div class="col-md-12" style="height: 60%;">
-                            <button type="button" class="btn btn-danger" id="btn_thanhtoanhoadon" style="width: 100%; height: 70px;">
-                                <h4 style="margin: 0;">Thanh toán</h4>
-                            </button>
+                       <hr />
+                        <div class="col-md-12" style="height:40%;">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <button type="button" class="btn btn-warning" id="btn_dathang" style="width: 100%; height: 100%;">
+                                        Đổi phương thức thanh toán
+                                    </button>
+
+                                </div>
+                                <div class="col-md-8">
+                                    <button type="button" class="btn btn-info" id="btn_thanhtoanhoadon" style="width: 100%; height: 70px;">
+                                        <h5 style="margin: 0;">Thanh toán</h5>
+                                    </button><hr />
+                                    <button type="button" class="btn btn-outline-success" id="btn_dathang" style="width: 100%; height: 70px;">
+                                        <h5 style="margin: 0;">Đặt hàng</h5>
+                                    </button>
+                                </div>
+                            </div>
+                           
+
                         </div>
+
                     </div>
                 </div>
 
