--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -149,15 +149,13 @@
                             <span class="hide-menu">Giảm giá</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./icon-tabler.html" aria-expanded="false">
-
-                                <a asp-controller="Voucher" asp-action="GetAllVoucher">
-                                    <i class="bi bi-circle"></i><span>Quản lý Voucher</span>
-                                </a>
-                           @*      <span class="hide-menu">Danh sách Voucher</span> *@
+                            <a class="sidebar-link" asp-action="AllVoucherManager" asp-controller="Voucher" asp-area="Admin">
+                                <span>
+                                    <i class="ti ti-login"></i>
+                                </span>
+                                <span class="hide-menu">Danh sách Voucher</span>
                             </a>
                         </li>
-
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
