--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/CreateSize.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Size/CreateSize.cshtml
@@ -21,9 +21,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
-                <label asp-for="TenSize" class="control-label"></label>
+                <label asp-for="TenSize" class="control-label">Tên Size</label>
                 <input asp-for="TenSize" class="form-control" />
-                <span asp-validation-for="TenSize" class="text-danger"></span>
+                <span asp-validation-for="TenSize" class="text-danger">Mô Tả</span>
             </div>
             <div class="form-group">
                 <label asp-for="MoTa" class="control-label"></label>
@@ -32,7 +32,7 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Thêm" class="btn btn-primary" />
     <a asp-action="AllSizeManager" class="btn btn-warning">Hủy</a>
 
             </div>
