--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChatLieu/CreateChatLieu.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChatLieu/CreateChatLieu.cshtml
@@ -16,17 +16,17 @@
 
 <form asp-action="CreateChatLieu" method="post">
     <div class="form-group">
-        <label asp-for="TenChatLieu" class="control-label"></label>
+        <label asp-for="TenChatLieu" class="control-label">Tên</label>
         <input asp-for="TenChatLieu" class="form-control" />
         <span asp-validation-for="TenChatLieu" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="MoTa" class="control-label"></label>
-        <textarea asp-for="MoTa" class="form-control"></textarea>
+        <textarea asp-for="MoTa" class="form-control">Mô Tả</textarea>
         <span asp-validation-for="MoTa" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
+        <input type="submit" value="Thêm" class="btn btn-primary" />
     <a asp-action="AllChatLieuManager" class="btn btn-warning">Hủy</a>
 
     </div>
