--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/AllChiTietSpManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChiTietSP/AllChiTietSpManager.cshtml
@@ -9,7 +9,7 @@
 <h1></h1>
 
 <p>
-    <a class="btn btn-primary" asp-action="CreateChiTietSp">Thêm Mới</a>
+    <a class="btn btn-primary"asp-controller="SanPham" asp-action="AllSanPhamManager">Danh Sách Sản Phẩm</a>
 </p>
 <table class="table">
     <thead>
