--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/CreateKhuyenMai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/KhuyenMai/CreateKhuyenMai.cshtml
@@ -19,18 +19,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="TenKhuyenMai" class="control-label"></label>
+                <label asp-for="TenKhuyenMai" class="control-label">Tên </label>
                 <input asp-for="TenKhuyenMai" class="form-control" />
                 <span asp-validation-for="TenKhuyenMai" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhanTramGiam" class="control-label"></label>
+                <label asp-for="PhanTramGiam" class="control-label">Phần trăm giảm</label>
                 <input asp-for="PhanTramGiam" class="form-control" />
                 <span asp-validation-for="PhanTramGiam" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Thêm" class="btn btn-primary" />
     <a asp-action="AllKhuyenMaiManager" class="btn btn-warning">Hủy</a>
 
             </div>
