--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -150,7 +150,7 @@
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="./icon-tabler.html" aria-expanded="false">
 
-                                <a asp-controller="Voucher" asp-action="GetAllVoucher">
+                                <a asp-area="Admin" asp-controller="Voucher" asp-action="GetAllVoucher" >
                                     <i class="bi bi-circle"></i><span>Quản lý Voucher</span>
                                 </a>
                            @*      <span class="hide-menu">Danh sách Voucher</span> *@
