--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -228,6 +228,8 @@
     </div>
     @* <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
     <script src="~/src/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/notify.js"></script>
+    <script src="~/js/notify.min.js"></script>
     <script src="~/src/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
