--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -54,8 +54,8 @@
                     
                      
                       <div class="col-md-6" style="display:none">
-                          <label for="btn_TongGiaTriHangHoa">Tổng tiền</label>
-                          <input id="btn_TongGiaTriHangHoa" class="form-control" type="text" />
+                          <label for="btn_phanloai">PhanLoai</label>
+                            <input id="btn_phanloai" class="form-control" type="number" value="1" />
                       </div>
                       <div class="col-md-6" style="display:none">
                           <label for="btn_Status">Trạng thái</label>
@@ -110,8 +110,12 @@
                       </div>
                       <div class="col-md-4">
                             <label for="clear"></label>
-                            <button type="text" class="form-control w-50" name="Street" id="clear">Reset địa chỉ</button>
+                            <button type="text" class="form-control w-50" name="clear" id="clear">Reset địa chỉ</button>
                       </div>
+                        <div class="col-md-4">
+                            <label for="btn_ghichu">Ghi chú</label>
+                            <input type="text" class="form-control" name="btn_ghichu" id="btn_ghichu">
+                        </div>
                  </div>
               </div>
           
