--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -197,7 +197,9 @@
                                                 {
                                                     <tr class="table-light">
                                                         <td class="table-light">@i</td>
-                                                        <td class="table-light">@item.UrlAnhSpct</td>
+                                                        <td class="table-light">
+                                                            <img src="~/photoSanPhamCT/@item.UrlAnhSpct" alt="Combo Image" width="100" height="100" />
+                                                            </td>
                                                         <td class="table-light">
                                                             SKU: @item.SKU<br>
                                                             Tên sản phẩm: @item.TenSP <br>
