--- a/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
@@ -548,11 +548,13 @@
         <!-- JS -->
 
         <script src="/js/vendor/jquery-1.12.0.min.js"></script>
+        <script src="/js/notify.js"></script>
         <script src="/js/popper.js"></script>
         <script src="/js/bootstrap.min.js"></script>
         <script src="/js/ajax-mail.js"></script>
         <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
+
 </body>
 
 </html>
