--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -127,15 +127,26 @@
                         </li>
                         <li class="nav-small-cap">
                             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                            <a class="sidebar-link" href="/admin/HoaDon/BanHangTaiQuayView">
+                                <span>
+                                    <i class="ti ti-typography"></i>
+                                </span>
+                                <span class="hide-menu">Bán hàng tại quầy</span>
+                            </a>
+                        </li>
+                        <li class="nav-small-cap">
+                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                             <span class="hide-menu">Quản lý hóa đơn</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./authentication-login.html" aria-expanded="false">
+                            <a class="sidebar-link" href="/admin/HoaDon/GetAllHoaDon">
+
                                 <span>
-                                    <i class="ti ti-login"></i>
+                                    <i class="ti ti-typography"></i>
                                 </span>
                                 <span class="hide-menu">Danh sách hóa đơn</span>
                             </a>
+                           
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
@@ -219,13 +230,13 @@
             </header>
 
             <!--  Header End -->
-            <div class="container-fluid">
-                <div class="container">
+        
+               
                     <main role="main" class="pb-3">
                         @RenderBody()
                     </main>
-                </div>
-            </div>
+            
+        
 
         </div>
     </div>
